--- a/Nucleo-H743ZI2-ADC-FIR-DAC.ioc
+++ b/Nucleo-H743ZI2-ADC-FIR-DAC.ioc
@@ -1,56 +1,133 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=
-CAD.pinconfig=
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIG_T6_TRGO
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,OffsetSignedSaturation-0\#ChannelRegularConversion,NbrOfConversionFlag,ExternalTrigConv,Resolution
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetSignedSaturation-0\#ChannelRegularConversion=DISABLE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Resolution=ADC_RESOLUTION_12B
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.master=1
+CAD.formats=[]
+CAD.pinconfig=Dual
 CAD.provider=
+DAC1.DAC_Channel-DAC_OUT1=DAC_CHANNEL_1
+DAC1.DAC_Channel-DAC_OUT2=DAC_CHANNEL_2
+DAC1.DAC_SampleAndHold-DAC_OUT2=DAC_SAMPLEANDHOLD_DISABLE
+DAC1.DAC_UserTrimming-DAC_OUT2=DAC_TRIMMING_FACTORY
+DAC1.IPParameters=DAC_Channel-DAC_OUT2,DAC_UserTrimming-DAC_OUT2,DAC_SampleAndHold-DAC_OUT2,DAC_Channel-DAC_OUT1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
-MMTAppRegionsCount=0
+MMTAppReg1.MEMORYMAP.AppRegionName=DTCMRAM
+MMTAppReg1.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg1.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg1.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg1.MEMORYMAP.Name=DTCMRAM
+MMTAppReg1.MEMORYMAP.Size=131072
+MMTAppReg1.MEMORYMAP.StartAddress=0x20000000
+MMTAppReg2.MEMORYMAP.AppRegionName=RAM
+MMTAppReg2.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg2.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg2.MEMORYMAP.DefaultDataRegion=true
+MMTAppReg2.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,DefaultDataRegion
+MMTAppReg2.MEMORYMAP.Name=RAM
+MMTAppReg2.MEMORYMAP.Size=524288
+MMTAppReg2.MEMORYMAP.StartAddress=0x24000000
+MMTAppReg3.MEMORYMAP.AppRegionName=RAM_D2
+MMTAppReg3.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg3.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg3.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg3.MEMORYMAP.Name=RAM_D2
+MMTAppReg3.MEMORYMAP.Size=294912
+MMTAppReg3.MEMORYMAP.StartAddress=0x30000000
+MMTAppReg4.MEMORYMAP.AppRegionName=RAM_D3
+MMTAppReg4.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg4.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg4.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name
+MMTAppReg4.MEMORYMAP.Name=RAM_D3
+MMTAppReg4.MEMORYMAP.Size=65536
+MMTAppReg4.MEMORYMAP.StartAddress=0x38000000
+MMTAppReg5.MEMORYMAP.AppRegionName=ITCMRAM
+MMTAppReg5.MEMORYMAP.Cacheability=WTRA
+MMTAppReg5.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg5.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg5.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,ContextName,Name,Cacheability
+MMTAppReg5.MEMORYMAP.Name=ITCMRAM
+MMTAppReg5.MEMORYMAP.Size=65536
+MMTAppReg5.MEMORYMAP.StartAddress=0x00000000
+MMTAppReg6.MEMORYMAP.AP=RO_priv_only
+MMTAppReg6.MEMORYMAP.AppRegionName=FLASH
+MMTAppReg6.MEMORYMAP.Cacheability=WTRA
+MMTAppReg6.MEMORYMAP.ContextName=Cortex-M7NS
+MMTAppReg6.MEMORYMAP.CoreName=ARM Cortex-M7
+MMTAppReg6.MEMORYMAP.DefaultCodeRegion=true
+MMTAppReg6.MEMORYMAP.IPParameters=StartAddress,Size,CoreName,MemType,ContextName,Name,AP,Cacheability,DefaultCodeRegion,ISRRegion,RootBootRegion
+MMTAppReg6.MEMORYMAP.ISRRegion=true
+MMTAppReg6.MEMORYMAP.MemType=ROM
+MMTAppReg6.MEMORYMAP.Name=FLASH
+MMTAppReg6.MEMORYMAP.RootBootRegion=true
+MMTAppReg6.MEMORYMAP.Size=2097152
+MMTAppReg6.MEMORYMAP.StartAddress=0x08000000
+MMTAppRegionsCount=6
 MMTConfigApplied=false
 Mcu.CPN=STM32H743ZIT6
 Mcu.Family=STM32H7
-Mcu.IP0=CORTEX_M7
-Mcu.IP1=MEMORYMAP
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART3
-Mcu.IP6=USB_OTG_FS
-Mcu.IPNb=7
+Mcu.IP0=ADC1
+Mcu.IP1=CORTEX_M7
+Mcu.IP10=USB_OTG_FS
+Mcu.IP2=DAC1
+Mcu.IP3=DEBUG
+Mcu.IP4=MEMORYMAP
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IP8=TIM6
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32H743ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin10=PC5
-Mcu.Pin11=PB0
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PD10
-Mcu.Pin17=PG7
-Mcu.Pin18=PA8
-Mcu.Pin19=PA9
+Mcu.Pin10=PA6
+Mcu.Pin11=PA7
+Mcu.Pin12=PC4
+Mcu.Pin13=PC5
+Mcu.Pin14=PB0
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PD8
+Mcu.Pin18=PD9
+Mcu.Pin19=PD10
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PG11
-Mcu.Pin23=PG13
-Mcu.Pin24=PE1
-Mcu.Pin25=VP_SYS_VS_Systick
-Mcu.Pin26=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin20=PG7
+Mcu.Pin21=PA8
+Mcu.Pin22=PA9
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13 (JTMS/SWDIO)
+Mcu.Pin26=PA14 (JTCK/SWCLK)
+Mcu.Pin27=PG11
+Mcu.Pin28=PG13
+Mcu.Pin29=PE1
 Mcu.Pin3=PH0-OSC_IN (PH0)
+Mcu.Pin30=VP_SYS_VS_Systick
+Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin32=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
-Mcu.Pin8=PA7
-Mcu.Pin9=PC4
-Mcu.PinsNb=27
+Mcu.Pin8=PA4
+Mcu.Pin9=PA5
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
 MxCube.Version=6.12.0
 MxDb.Version=DB.6.0.120
+NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -61,6 +138,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Locked=true
 PA1.Signal=ETH_REF_CLK
@@ -70,8 +148,16 @@ PA11.Signal=USB_OTG_FS_DM
 PA12.Locked=true
 PA12.Mode=Device_Only
 PA12.Signal=USB_OTG_FS_DP
+PA13\ (JTMS/SWDIO).Mode=Serial_Wire
+PA13\ (JTMS/SWDIO).Signal=DEBUG_JTMS-SWDIO
+PA14\ (JTCK/SWCLK).Mode=Serial_Wire
+PA14\ (JTCK/SWCLK).Signal=DEBUG_JTCK-SWCLK
 PA2.Locked=true
 PA2.Signal=ETH_MDIO
+PA4.Signal=COMP_DAC11_group
+PA5.Signal=COMP_DAC12_group
+PA6.Locked=true
+PA6.Signal=ADCx_INP3
 PA7.Locked=true
 PA7.Signal=ETH_CRS_DV
 PA8.Locked=true
@@ -97,10 +183,8 @@ PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.Locked=true
 PC13.Signal=GPIO_Input
 PC14-OSC32_IN\ (OSC32_IN).Locked=true
-PC14-OSC32_IN\ (OSC32_IN).Mode=LSE-External-Oscillator
 PC14-OSC32_IN\ (OSC32_IN).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (OSC32_OUT).Locked=true
-PC15-OSC32_OUT\ (OSC32_OUT).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (OSC32_OUT).Signal=RCC_OSC32_OUT
 PC4.Locked=true
 PC4.Signal=ETH_RXD0
@@ -133,7 +217,6 @@ PG7.GPIO_Label=USB_OTG_FS_OVCR
 PG7.Locked=true
 PG7.Signal=GPXTI7
 PH0-OSC_IN\ (PH0).Locked=true
-PH0-OSC_IN\ (PH0).Mode=HSE-External-Clock-Source
 PH0-OSC_IN\ (PH0).Signal=RCC_OSC_IN
 PH1-OSC_OUT\ (PH1).Locked=true
 PH1-OSC_OUT\ (PH1).Signal=RCC_OSC_OUT
@@ -168,88 +251,108 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.ADCFreq_Value=16125000
-RCC.AHB12Freq_Value=240000000
-RCC.AHB4Freq_Value=240000000
-RCC.APB1Freq_Value=60000000
-RCC.APB2Freq_Value=120000000
-RCC.APB3Freq_Value=120000000
-RCC.APB4Freq_Value=120000000
-RCC.AXIClockFreq_Value=240000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_DAC1_Init-DAC1-false-HAL-true,7-MX_TIM6_Init-TIM6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.ADCFreq_Value=75000000
+RCC.AHB12Freq_Value=200000000
+RCC.AHB4Freq_Value=200000000
+RCC.APB1Freq_Value=100000000
+RCC.APB2Freq_Value=100000000
+RCC.APB3Freq_Value=100000000
+RCC.APB4Freq_Value=100000000
+RCC.AXIClockFreq_Value=200000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=64000000
-RCC.CortexFreq_Value=240000000
-RCC.CpuClockFreq_Value=240000000
-RCC.D1CPREFreq_Value=240000000
+RCC.CortexFreq_Value=400000000
+RCC.CpuClockFreq_Value=400000000
+RCC.D1CPREFreq_Value=400000000
 RCC.D1PPRE=RCC_APB3_DIV2
-RCC.D2PPRE1=RCC_APB1_DIV4
+RCC.D2PPRE1=RCC_APB1_DIV2
 RCC.D2PPRE2=RCC_APB2_DIV2
 RCC.D3PPRE=RCC_APB4_DIV2
-RCC.DFSDMACLkFreq_Value=60000000
-RCC.DFSDMFreq_Value=120000000
-RCC.DIVM1=1
-RCC.DIVN1=60
-RCC.DIVP1Freq_Value=240000000
-RCC.DIVP2Freq_Value=16125000
-RCC.DIVP3Freq_Value=16125000
-RCC.DIVQ1=8
-RCC.DIVQ1Freq_Value=60000000
-RCC.DIVQ2Freq_Value=16125000
-RCC.DIVQ3Freq_Value=16125000
-RCC.DIVR1Freq_Value=240000000
-RCC.DIVR2Freq_Value=16125000
-RCC.DIVR3Freq_Value=16125000
-RCC.FDCANFreq_Value=60000000
-RCC.FMCFreq_Value=240000000
+RCC.DFSDMACLkFreq_Value=400000000
+RCC.DFSDMFreq_Value=100000000
+RCC.DIVM1=2
+RCC.DIVM2=4
+RCC.DIVM3=4
+RCC.DIVN1=400
+RCC.DIVN2=150
+RCC.DIVN3=150
+RCC.DIVP1Freq_Value=400000000
+RCC.DIVP2Freq_Value=75000000
+RCC.DIVP3Freq_Value=75000000
+RCC.DIVQ1Freq_Value=400000000
+RCC.DIVQ2=1
+RCC.DIVQ2Freq_Value=150000000
+RCC.DIVQ3=1
+RCC.DIVQ3Freq_Value=150000000
+RCC.DIVR1=4
+RCC.DIVR1Freq_Value=200000000
+RCC.DIVR2Freq_Value=75000000
+RCC.DIVR3Freq_Value=75000000
+RCC.FDCANFreq_Value=400000000
+RCC.FMCFreq_Value=200000000
 RCC.FamilyName=M
-RCC.HCLK3ClockFreq_Value=240000000
-RCC.HCLKFreq_Value=240000000
-RCC.HRTIMFreq_Value=240000000
+RCC.HCLK3ClockFreq_Value=200000000
+RCC.HCLKFreq_Value=200000000
+RCC.HPRE=RCC_HCLK_DIV2
+RCC.HRTIMFreq_Value=200000000
 RCC.HSE_VALUE=8000000
-RCC.I2C123Freq_Value=60000000
-RCC.I2C4Freq_Value=120000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
-RCC.LPTIM1Freq_Value=60000000
-RCC.LPTIM2Freq_Value=120000000
-RCC.LPTIM345Freq_Value=120000000
-RCC.LPUART1Freq_Value=120000000
-RCC.LTDCFreq_Value=16125000
+RCC.I2C123Freq_Value=100000000
+RCC.I2C4Freq_Value=100000000
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM2,DIVM3,DIVN1,DIVN2,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1Freq_Value,DIVQ2,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,PWR_Regulator_Voltage_Scale,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578CLockSelection,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.LPTIM1Freq_Value=100000000
+RCC.LPTIM2Freq_Value=100000000
+RCC.LPTIM345Freq_Value=100000000
+RCC.LPUART1Freq_Value=100000000
+RCC.LTDCFreq_Value=75000000
 RCC.MCO1PinFreq_Value=64000000
-RCC.MCO2PinFreq_Value=240000000
+RCC.MCO2PinFreq_Value=400000000
 RCC.PLL2FRACN=0
 RCC.PLL3FRACN=0
 RCC.PLLFRACN=0
-RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE2
-RCC.QSPIFreq_Value=240000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_CSI
+RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE0
+RCC.QSPIFreq_Value=200000000
 RCC.RNGFreq_Value=48000000
 RCC.RTCFreq_Value=32000
-RCC.SAI1Freq_Value=60000000
-RCC.SAI23Freq_Value=60000000
-RCC.SAI4AFreq_Value=60000000
-RCC.SAI4BFreq_Value=60000000
-RCC.SDMMCFreq_Value=60000000
-RCC.SPDIFRXFreq_Value=60000000
-RCC.SPI123Freq_Value=60000000
-RCC.SPI45Freq_Value=120000000
-RCC.SPI6Freq_Value=120000000
-RCC.SWPMI1Freq_Value=60000000
-RCC.SYSCLKFreq_VALUE=240000000
+RCC.SAI1Freq_Value=400000000
+RCC.SAI23Freq_Value=400000000
+RCC.SAI4AFreq_Value=400000000
+RCC.SAI4BFreq_Value=400000000
+RCC.SDMMCFreq_Value=400000000
+RCC.SPDIFRXFreq_Value=400000000
+RCC.SPI123Freq_Value=400000000
+RCC.SPI45Freq_Value=100000000
+RCC.SPI6Freq_Value=100000000
+RCC.SWPMI1Freq_Value=100000000
+RCC.SYSCLKFreq_VALUE=400000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.Tim1OutputFreq_Value=120000000
-RCC.Tim2OutputFreq_Value=240000000
-RCC.TraceFreq_Value=64000000
-RCC.USART16Freq_Value=120000000
-RCC.USART234578Freq_Value=60000000
-RCC.USBFreq_Value=60000000
-RCC.VCO1OutputFreq_Value=480000000
-RCC.VCO2OutputFreq_Value=32250000
-RCC.VCO3OutputFreq_Value=32250000
-RCC.VCOInput1Freq_Value=8000000
-RCC.VCOInput2Freq_Value=250000
-RCC.VCOInput3Freq_Value=250000
+RCC.Tim1OutputFreq_Value=200000000
+RCC.Tim2OutputFreq_Value=200000000
+RCC.TraceFreq_Value=200000000
+RCC.USART16Freq_Value=100000000
+RCC.USART234578CLockSelection=RCC_USART234578CLKSOURCE_HSI
+RCC.USART234578Freq_Value=64000000
+RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
+RCC.USBFreq_Value=48000000
+RCC.VCO1OutputFreq_Value=800000000
+RCC.VCO2OutputFreq_Value=150000000
+RCC.VCO3OutputFreq_Value=150000000
+RCC.VCOInput1Freq_Value=2000000
+RCC.VCOInput2Freq_Value=1000000
+RCC.VCOInput3Freq_Value=1000000
+SH.ADCx_INP3.0=ADC1_INP3,IN3-Single-Ended
+SH.ADCx_INP3.ConfNb=1
+SH.COMP_DAC11_group.0=DAC1_OUT1,DAC_OUT1
+SH.COMP_DAC11_group.ConfNb=1
+SH.COMP_DAC12_group.0=DAC1_OUT2,DAC_OUT2
+SH.COMP_DAC12_group.ConfNb=1
 SH.GPXTI7.0=GPIO_EXTI7
 SH.GPXTI7.ConfNb=1
+TIM6.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
+TIM6.Period=9
+TIM6.Prescaler=199
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
@@ -258,5 +361,7 @@ VP_MEMORYMAP_VS_MEMORYMAP.Mode=CurAppReg
 VP_MEMORYMAP_VS_MEMORYMAP.Signal=MEMORYMAP_VS_MEMORYMAP
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=NUCLEO-H743ZI2
 boardIOC=true
